compute/infra/kubes/core/kanban/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wekan-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - kanban.atelier.run
      secretName: projects-atelier-key
  rules:
    - host: kanban.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wekan-web
                port:
                  number: 8080
